# UC-Check

./: README.md  _config.yml
diags/mapping_policy/: CMakeLists.txt  codegen.c  codegen.h  context.h  objdump_code_block.sh  utils.c  utils.h
diags/mapping_policy/scripts/: parse_all.py  run_all.sh
diags/sharing_policy/: CMakeLists.txt  codegen.c  codegen.h  context.h  main.c  utils.c  utils.h
diags/sharing_policy/scripts_numUop/: parse_all.py  run_all.sh
diags/sharing_policy/scripts_sharing/: parse_all.py  run_all.sh
diags/sharing_policy/scripts_window/: parse_all.py  run_all.sh
diags/transient_check/: CMakeLists.txt  main.c  nanoBench.c  run.sh
usecases/cross-SMT/: global.h  objdump_code_block.sh  run.sh  utils.c  utils.h
usecases/cross-SMT/Spy/: Makefile  codegen.c  codegen.h  spy.c
usecases/cross-SMT/Victim/: Makefile  victim.c
usecases/logical_partitioning/: source.patch
usecases/spectre_uopcache/: CMakeLists.txt  main.c
